FIX BUG HỢP ĐỒNG, CÀI ĐẶT THÔNG TIN CHỦ NHÀ, GỬI ĐƯỢC FILE PDF. - Chưa thiết kế lại nội dung phụ lục PDF

--- a/LoginShell.xaml
+++ b/LoginShell.xaml
@@ -10,4 +10,7 @@
     <ShellContent
         ContentTemplate="{DataTemplate local:LoginPage}"
         Route="LoginPage" />
+    <ShellContent
+        ContentTemplate="{DataTemplate local:ForgotPasswordPage}"
+        Route="forgotpassword" />
 </Shell>
